# CIS5650-Final-Project-Frostnova

./: CMakeLists.txt  README.md
src/: BufferUtils.cpp  BufferUtils.h  CMakeLists.txt  Camera.cpp  Camera.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  GUIManager.cpp  GUIManager.h  Image.cpp  Image.h  Instance.cpp  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  SwapChain.cpp  SwapChain.h  main.cpp
src/images/noise/tga/: NubisVoxelCloudNoise(0).tga  NubisVoxelCloudNoise(1).tga  NubisVoxelCloudNoise(10).tga  NubisVoxelCloudNoise(100).tga  NubisVoxelCloudNoise(101).tga  NubisVoxelCloudNoise(102).tga  NubisVoxelCloudNoise(103).tga  NubisVoxelCloudNoise(104).tga  NubisVoxelCloudNoise(105).tga  NubisVoxelCloudNoise(106).tga  NubisVoxelCloudNoise(107).tga  NubisVoxelCloudNoise(108).tga  NubisVoxelCloudNoise(109).tga  NubisVoxelCloudNoise(111).tga  NubisVoxelCloudNoise(112).tga  NubisVoxelCloudNoise(113).tga  NubisVoxelCloudNoise(114).tga  NubisVoxelCloudNoise(115).tga  NubisVoxelCloudNoise(116).tga  NubisVoxelCloudNoise(117).tga  NubisVoxelCloudNoise(119).tga  NubisVoxelCloudNoise(121).tga  NubisVoxelCloudNoise(124).tga  NubisVoxelCloudNoise(14).tga  NubisVoxelCloudNoise(16).tga  NubisVoxelCloudNoise(17).tga  NubisVoxelCloudNoise(19).tga  NubisVoxelCloudNoise(2).tga  NubisVoxelCloudNoise(20).tga  NubisVoxelCloudNoise(21).tga  NubisVoxelCloudNoise(25).tga  NubisVoxelCloudNoise(26).tga  NubisVoxelCloudNoise(3).tga  NubisVoxelCloudNoise(30).tga  NubisVoxelCloudNoise(31).tga  NubisVoxelCloudNoise(32).tga  NubisVoxelCloudNoise(34).tga  NubisVoxelCloudNoise(35).tga  NubisVoxelCloudNoise(36).tga  NubisVoxelCloudNoise(37).tga  (+41 more)
src/images/vdb/example1/tga/: NubisVoxelCloudNoise(11).tga  NubisVoxelCloudNoise(110).tga  NubisVoxelCloudNoise(118).tga  NubisVoxelCloudNoise(12).tga  NubisVoxelCloudNoise(120).tga  NubisVoxelCloudNoise(122).tga  NubisVoxelCloudNoise(123).tga  NubisVoxelCloudNoise(125).tga  NubisVoxelCloudNoise(126).tga  NubisVoxelCloudNoise(127).tga  NubisVoxelCloudNoise(13).tga  NubisVoxelCloudNoise(15).tga  NubisVoxelCloudNoise(18).tga  NubisVoxelCloudNoise(22).tga  NubisVoxelCloudNoise(23).tga  NubisVoxelCloudNoise(24).tga  NubisVoxelCloudNoise(27).tga  NubisVoxelCloudNoise(28).tga  NubisVoxelCloudNoise(29).tga  NubisVoxelCloudNoise(33).tga  NubisVoxelCloudNoise(38).tga  NubisVoxelCloudNoise(4).tga  NubisVoxelCloudNoise(42).tga  NubisVoxelCloudNoise(43).tga  NubisVoxelCloudNoise(44).tga  NubisVoxelCloudNoise(45).tga  NubisVoxelCloudNoise(46).tga  NubisVoxelCloudNoise(48).tga  NubisVoxelCloudNoise(5).tga  NubisVoxelCloudNoise(50).tga  NubisVoxelCloudNoise(53).tga  NubisVoxelCloudNoise(59).tga  NubisVoxelCloudNoise(6).tga  NubisVoxelCloudNoise(61).tga  NubisVoxelCloudNoise(64).tga  NubisVoxelCloudNoise(7).tga  NubisVoxelCloudNoise(70).tga  NubisVoxelCloudNoise(71).tga  NubisVoxelCloudNoise(72).tga  NubisVoxelCloudNoise(73).tga  (+239 more)
src/images/vdb/example2/tga/: field_data(0).tga  field_data(1).tga  field_data(10).tga  field_data(11).tga  field_data(12).tga  field_data(13).tga  field_data(14).tga  field_data(15).tga  field_data(16).tga  field_data(17).tga  field_data(19).tga  field_data(2).tga  field_data(20).tga  field_data(21).tga  field_data(23).tga  field_data(24).tga  field_data(25).tga  field_data(26).tga  field_data(27).tga  field_data(28).tga  field_data(29).tga  field_data(3).tga  field_data(30).tga  field_data(31).tga  field_data(33).tga  field_data(34).tga  field_data(35).tga  field_data(36).tga  field_data(37).tga  field_data(38).tga  field_data(39).tga  field_data(4).tga  field_data(40).tga  field_data(41).tga  field_data(42).tga  field_data(44).tga  field_data(45).tga  field_data(46).tga  field_data(47).tga  field_data(49).tga  (+80 more)
src/shaderprogram/: BackgroundShader.cpp  BackgroundShader.h  ComputeFarShader.cpp  ComputeFarShader.h  ComputeLightGridShader.cpp  ComputeLightGridShader.h  ComputeNearShader.cpp  ComputeNearShader.h  ComputeNubisCubedShader.cpp  ComputeNubisCubedShader.h  ComputeShader.cpp  ComputeShader.h  PostShader.cpp  PostShader.h  ReprojectShader.cpp  ReprojectShader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramIncludes.h
src/shaders/: compute.comp  computeNubisCubed.comp  farCloud.comp  graphics.frag  graphics.vert  lightGrid.comp  nearCloud.comp  post.vert  reproject.comp  tone.frag
src/vdb/: BoundBox.cpp  BoundBox.h  Types.h  VDBLoader.cpp  VDBLoader.h  vdb.cpp  vdb.h
